--- a/src/part/Home/SubHeadline/subheadline.module.css
+++ b/src/part/Home/SubHeadline/subheadline.module.css
@@ -42,6 +42,7 @@ div.circle{
   border-radius: 50%;
   position: absolute;
   left: 20vw;
+  margin-top: -25px;
   box-shadow: 0 20px 30px 0 #0b24fb;
 }
 
